# svmtool-cpp

./: .travis.yml  CMakeLists.txt  Dockerfile-debian12  Dockerfile-debian9.4  Dockerfile-manylinux2.28  Dockerfile-ubuntu14.04  Dockerfile-ubuntu16.04  Dockerfile-ubuntu18.04  Dockerfile-ubuntu22.04  INSTALL  README.TXT  SVMTOOL++Config.cmake  SystemSpecificInformations.cmake  TODO.TXT  appveyor.yml  cbuild.sh  cpack.sh
.github/workflows/: main.yml
pack/: CMakeCache.txt  CPackConfig.cmake  CPackSourceConfig.cmake  Makefile  cmake_install.cmake  compile_commands.json  install_manifest.txt
pack/_CPack_Packages/Linux/DEB/: svmtool-cpp-1.1.7-Linux.deb
pack/_CPack_Packages/Linux/DEB/svmtool-cpp-1.1.7-Linux/: control  md5sums
pack/_CPack_Packages/Linux/DEB/svmtool-cpp-1.1.7-Linux/usr/include/svmtool/: common.h  dict.h  er.h  nodo.h
pack/_CPack_Packages/Linux/DEB/svmtool-cpp-1.1.7-Linux/usr/lib/: libsvmtool.so.1.1.6
pack/sample/: Makefile  cmake_install.cmake  sample
pack/src/: Makefile  SVMTagger  SVMTeval  SVMTlearn  cmake_install.cmake  libsvmtool.so.1
sample/: CMakeLists.txt  main.cc
src/: CMakeLists.txt  SVMTagger.cc  SVMTeval.cc  SVMTlearn.cc  api.cc  api.h  common.cc  common.h  dict.cc  dict.h  er.cc  hash.h  learner.cc  learner.h  list.h  mapping.cc  mapping.h  marks.h  nodo.h  reader.cc  reader.h  stack.cc  stack.h  strategies.h  swindow.cc  swindow.h  tagger.cc  tagger.h  weight.cc  weight.h
